--- a/Curriculum/index.html
+++ b/Curriculum/index.html
@@ -8,7 +8,7 @@
     <meta property="og:type"               content="article" /> 
     <meta property="og:title"              content="Curriculum | Editar tu curriculum" />
     <meta property="og:description"        content="¿Necesitas un Curriculum minimalista de forma facil y sencilla? Edita aquí tu curriculum y descargalo convertido a PDF." />
-    <meta property="og:image"              content="https://github.com/Nestor-B/template-curriculum/Curriculum/Curriculum.png" />    
+    <meta property="og:image"              content="https://raw.githubusercontent.com/Nestor-B/template-curriculum/main/Curriculum/Curriculum.png" />    
     <title> Curriculum | Editar tu Curriculum </title>
     <link rel="stylesheet" href="./css/main.css">
 </head>
