--- a/Curriculum/index.html
+++ b/Curriculum/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:url"                content="https://github.com/Nestor-B/template-curriculum/Curriculum.html" />
+    <meta property="og:url"                content="https://nestor-b.github.io/template-curriculum/Curriculum/" />
     <meta property="og:type"               content="article" /> 
     <meta property="og:title"              content="Curriculum | Editar tu curriculum" />
     <meta property="og:description"        content="¿Necesitas un Curriculum minimalista de forma facil y sencilla? Edita aquí tu curriculum y descargalo convertido a PDF." />
