--- a/Curriculum/index.html
+++ b/Curriculum/index.html
@@ -11,6 +11,16 @@
     <meta property="og:image"              content="https://raw.githubusercontent.com/Nestor-B/template-curriculum/main/Curriculum/Curriculum.png" />    
     <title> Curriculum | Editar tu Curriculum </title>
     <link rel="stylesheet" href="./css/main.css">
+    <style type="text/css" media="print">
+        @media print {
+            body {
+                font-family:Arial, Helvetica, sans-serif;
+                background: url(../img/fondo.png);
+                background-size: 130% 130%;
+                background-position: 0 0;
+            }
+        }
+    </style>
 </head>
 <body>
 
