--- a/Curriculum/index.html
+++ b/Curriculum/index.html
@@ -79,7 +79,7 @@
                     <button title="Add Experience" onclick="addExperience()" style="border: 0;background-color: transparent;font-size: 25px;color: gray;cursor: pointer;">+</button>
                 </div>
 
-                <div id="contentExperience">
+                <div id="contentExperience" style="padding-left: 15px">
                     <div>
                         <h3>Senior Web Developer</h3>
                         <br>
@@ -117,7 +117,7 @@
                     <button title="Add Education" onclick="addEducation()" style="border: 0;background-color: transparent;font-size: 25px;color: gray;cursor: pointer;">+</button>
                 </div>
 
-                <div id="contentEducation">
+                <div id="contentEducation" style="padding-left: 15px">
                     <div>
                         <h3>Computer engineer</h3>
                         <br>
