--- a/Curriculum/index.html
+++ b/Curriculum/index.html
@@ -76,7 +76,7 @@
 
                 <div style="display: flex;justify-content: space-between;">
                     <h2 contenteditable="false" style="color: rgb(15, 108, 202);">Experience</h2> 
-                    <button title="Add Experience" onclick="addExperience()" style="border: 0;background-color: transparent;font-size: 25px;color: gray;cursor: pointer;">+</button>
+                    <button contenteditable="false" title="Add Experience" onclick="addExperience()" style="border: 0;background-color: transparent;font-size: 25px;color: gray;cursor: pointer;">+</button>
                 </div>
 
                 <div id="contentExperience" style="padding-left: 10px">
@@ -114,7 +114,7 @@
 
                 <div style="display: flex;justify-content: space-between;">
                     <h2 contenteditable="false" style="color: rgb(15, 108, 202);">Education</h2> 
-                    <button title="Add Education" onclick="addEducation()" style="border: 0;background-color: transparent;font-size: 25px;color: gray;cursor: pointer;">+</button>
+                    <button contenteditable="false" title="Add Education" onclick="addEducation()" style="border: 0;background-color: transparent;font-size: 25px;color: gray;cursor: pointer;">+</button>
                 </div>
 
                 <div id="contentEducation" style="padding-left: 10px">
